[tool.poetry]
name = "skeleton"
version = "0.1.0"
description = "A copier template for bswck projects."
authors = ["bswck <bswck.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.5,<3.11"
poethepoet = "^0.24.3"
copier = "^9.1.0"
copier-template-tester = "^2.1.1"
copier-templates-extensions = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
