#%- if not included %#
[tool.poetry]
name = "skeleton"
version = "0.1.0"
description = "A copier template for bswck projects."
authors = ["bswck <bswck.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.5,<3.11"
poethepoet = "^0.24.3"
copier = "^9.1.1"
copier-template-tester = "^2.1.1"
copier-templates-extensions = "^0.3.0"
pre-commit = "^3.6.2"

[tool.poetry.group.dev-skeleton.dependencies]
#%- endif %#
# {{_origin|skeleton_notice(snref=snref, srev=srev, scope="dependency group")|indent("# ")}}
mypy = "^1.7.0"
ruff = "^0.2.2"
towncrier = "^23.11.0"
#%- if tests %#
coverage = "^7.4.2"
pytest = "^8.0.0"
pytest-doctestplus = "^1.1.0"
covdefaults = "^2.3.0"
#%- endif %#
poethepoet = "^0.24.3"
#%- if precommit %#
pre-commit = "^3.6.2"
#%- endif %#
#%- if public and tests %#
smokeshow = "^0.4.0"
#%- endif %#
keyring = "^24.3.0"

#%- if not included %#
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
#%- endif %#